--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
